--- a/Vidly/Views/Customers/Index.cshtml
+++ b/Vidly/Views/Customers/Index.cshtml
@@ -6,6 +6,10 @@
 }
 
 <h2>Customers</h2>
+<p>
+	@Html.ActionLink("New Customer", "New", "Customers", null, new { @class = "btn btn-primary" })
+</p>
+
 @if (!Model.Any())
 {
 	<p> We don't have any customers yet! </p>
@@ -15,7 +19,7 @@ else
 	<table class="table table-bordered table-hover">
 		<thead>
 		<th> Customers </th>
-		<th> Membership Type </th>	
+		<th> Membership Type </th>
 		</thead>
 		<tbody>
 			@foreach (var customer in Model)
