--- a/Vidly/Views/Customers/CustomerForm.cshtml
+++ b/Vidly/Views/Customers/CustomerForm.cshtml
@@ -1,4 +1,4 @@
-﻿@model Vidly.ViewModels.CustomerFormViewModel
+﻿@model CustomerViewModel
 
 @{
 	ViewBag.Title = "New";
@@ -11,26 +11,26 @@
 {
 	@Html.ValidationSummary(true, "Please fix the following errors.")
 	<div class="form-group">
-		@Html.LabelFor(m => m.Customer.Name)
-		@Html.TextBoxFor(m => m.Customer.Name, new { @class = "form-control" })
-		@Html.ValidationMessageFor(m => m.Customer.Name)
+		@Html.LabelFor(m => m.Name)
+		@Html.TextBoxFor(m => m.Name, new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.Name)
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.Customer.MembershipTypeId)
-		@Html.DropDownListFor(m => m.Customer.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
-		@Html.ValidationMessageFor(m => m.Customer.MembershipTypeId)
+		@Html.LabelFor(m => m.MembershipTypeId)
+		@Html.DropDownListFor(m => m.MembershipTypeId, new SelectList(Model.MembershipTypes, "Id", "Name"), "Select Membership Type", new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.MembershipTypeId)
 	</div>
 	<div class="form-group">
-		@Html.LabelFor(m => m.Customer.Birthdate)
-		@Html.TextBoxFor(m => m.Customer.Birthdate, "{0:d MMM yyyy}", new { @class = "form-control" })
-		@Html.ValidationMessageFor(m => m.Customer.Birthdate)
+		@Html.LabelFor(m => m.Birthdate)
+		@Html.TextBoxFor(m => m.Birthdate, "{0:d MMM yyyy}", new { @class = "form-control" })
+		@Html.ValidationMessageFor(m => m.Birthdate)
 	</div>
 	<div class="checkbox">
 		<label>
-			@Html.CheckBoxFor(m => m.Customer.IsSubscribedToNewsLetter) Subscribed to Newsletter?
+			@Html.CheckBoxFor(m => m.IsSubscribedToNewsLetter) Subscribed to Newsletter?
 		</label>
 	</div>
-	@Html.HiddenFor(m => m.Customer.Id)
+	@Html.HiddenFor(m => m.Id)
 	@Html.AntiForgeryToken()
 	<button type="submit" class="btn btn-primary">Save</button>
 }
