--- a/Vidly/Views/Movies/List.cshtml
+++ b/Vidly/Views/Movies/List.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Vidly.Models.Movie>
+﻿@model IEnumerable<Vidly.Entities.Models.Movie>
 @{
 	ViewBag.Title = "Movies";
 	Layout = "~/Views/Shared/_Layout.cshtml";
